2021-02-27  Morten Linderud  <morten@linderud.pw>

	* poke/poke.pk: Fix setting of map_load_path when XDG_DATA_HOME is
	set.

2021-02-27  Jose E. Marchesi  <jemarch@gnu.org>

	* m4/ax_create_pkgconfig_info.m4: Import file from autoconf
	archive.

2021-02-27  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org (Backporting to maintenance branches): New
	section.
	* HACKING: Regenerate.
	* DEV-NEWS: Update.

2021-02-27  Sergei Trofimovich <slyfox@gentoo.org>

	* doc/poke.texi (Describe-Compute): fix example and wording.

2021-02-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios-dev-file.c (ios_dev_file_open): Avoid accessing to
	an uninitialized variable.

2021-02-27  Thomas Weißschuh <thomas@t-8ch.de>

	* configure.ac: Call AX_CREATE_PKGCONFIG_INFO.
	* libpoke/Makefile.am (dist_pkgconfig_lib_DATA): Distribute
	poke.pc.
	* .gitignore: Update.

2021-02-26  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios-dev-file.c (ios_dev_file_handler_normalize): Take error
	as an argument rather than having it as return value.
	(ios_dev_file_open): Likewise.
	* libpoke/ios-dev-mem.c (ios_dev_mem_handler_normalize): Likewise.
	(ios_dev_mem_open): Likewise.
	* libpoke/ios-dev-nbd.c (ios_dev_nbd_handler_normalize): Likewise.
	(ios_dev_nbd_open): Likewise.
	* libpoke/ios-dev-stream.c (ios_dev_stream_handler_normalize):
	Likewise.
	(ios_dev_stream_open): Likewise.
	* libpoke/ios-dev.h (handler_normalize): Likewise.
	(open): Likewise.
	(IOS_FILE_HANDLER_NORMALIZE): Rename newhandler as new_handler.
	* ios.c (ios_open): Adjust calls to handler_normalize and open.

2021-02-26  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/Makefile.am (EXTRA_DIST): Distribute etc/poke.rec.

2021-02-26  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update version number to 1.0.
	* NEWS: Update for 1.0.
	* doc/gendocs_template: Likewise.

2021-02-25  Indu Bhagat  <indu.bhagat@oracle.com>

	* pickles/ctf.pk (ctf_kind_str): Add string for slice.
	(CTF_Dictionary): New type.